public/less/styles.less
/* ... */
#loadscreentext {
  font-weight: 300;
  font-family: @pane_font-family;
}

.modal-title {
  line-height: 1;
}

.modal-open {
  overflow: auto !important;
}

#container {
  position: absolute;
  width: 100%;
  height: 100%;
}

#map {
  position: absolute;
  width: 100%;
  transition: opacity 250ms;
  -moz-transition: opacity 250ms;
  -webkit-transition: opacity 250ms;
  height: 100%;
  top: 0;
  right: 0;
  z-index: 0;
}

.leaflet-control {
  border: none !important;
  border-radius: 0 !important;
  background-color: #eee;
  padding: 2px;
  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12) !important;
}

.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
  border: none;
}

.leaflet-control-boxzoom {
  width: 34px !important;
  height: 34px !important;
}

.leaflet-bar a, .leaflet-bar a:hover {
  border-bottom: 1px solid #eee !important;
}

.leaflet-draw-toolbar {
  margin-top: 2px;

}

.leaflet-draw-toolbar-top {
  margin-top: 0;
}

.leaflet-touch .leaflet-bar a:first-child {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}


.leaflet-touch .leaflet-bar a:last-child {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

#side-panel {
  width: 100%;
  right: 0;
  border: 0;
  overflow: scroll;
  height: calc(~'100vh - 30px');
  background-color: white;
}

#legend {
  position: relative;
}

.legend li {
  list-style-type: none;
}

#info-box {
  position: relative;
  width: 100%;
}

.tab-pane {
  padding: 6px;
  //overflow: auto;
}

#pane {
  position: fixed;
  top: 0px;
  bottom: 0px;
  width: 100%;
  z-index: 0;
}

.tab-content.main-content, .tab-content .tab-pane {
  height: 100%;
}

#menu {
  z-index: 2 !important;
}

.popover {
  width: 225px;
}

/*.popover-inner {
    overflow: auto;
    max-height: 400px;
}*/
img {
  max-width: none !important;
}

#modal-info-body {
  display: none;
}

.modal-body {
  overflow: auto;
  height: 100%;
}

input[type="radio"],
input[type="checkbox"] {
  margin: 0 8px 0 0 !important;
  margin-top: 1px \9;
}

.radio,
.checkbox {
  min-height: 0 !important;
  padding-left: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.check {
  margin-right: 5px !important;
}

.infobox {
  bottom: auto !important;
  overflow-y: hidden !important;
  z-index: 2 !important;
}

.modal-footer {
  margin-top: 0 !important;
  padding: 9px 10px 10px;
}

.dialog-bottom .modal-header {
  padding: 0 15px 10px 15px
}

#result_GroupDiv {
  background: white;
  box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
  padding: 1px;
  text-align: left;
  -webkit-border-radius: 20px;
  border-radius: 20px;
}

#queryResult {
  margin: 10px 15px;
  line-height: 1.4;
  font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
  min-width: 100px;
}

#result {
  opacity: 1 !important;
  background-color: transparent !important;
  padding: 10px;
  position: relative;
}

.pac-container {
  z-index: 10000000 !important;
}

.images-base-map {
  width: 50px;
  margin-right: 5px;
}

#base-layers div {
  margin-bottom: 10px;
}

.base-map-button {
  margin-top: 0 !important;
}

.meta-info {
  padding: 0 !important;
}

.table > thead > tr > th,
.table > tbody > tr > th,
.table > tfoot > tr > th,
.table > thead > tr > td,
.table > tbody > tr > td,
.table > tfoot > tr > td {
  padding: 4px;
  line-height: 1.428571429;
  vertical-align: top;
  border-top: 1px solid #f5f5f5;
  font-family: @table_font-family;
  font-weight: 300;
  border-bottom: 0;
}

.nav-tabs > li > a,
.dropdown-menu > li > a {
  font-weight: 500;
  font-family: @navigation_font-family;
  padding: 6px 10px;
  text-decoration: none !important;
}

.nav-tabs > .active {
  background-color: rgba(255, 255, 255, 0.1) !important;
}

.pane input,
.pane textarea {
  font-weight: 300;
  font-family: @pane_font-family;
}

.navbar {
  border-radius: 0;
  min-height: 0;
  margin-bottom: 0;
}

.legend-text {
  margin-left: 5px;
  font-size: 14px;
}

.popover-content {
  overflow: auto;
}

.popover-content td,
.popover-content span {
  vertical-align: top !important;
  font-weight: 300;
  font-family: @popover-content_font-family;
}

.leaflet-top {
  top: 50px;
}

/*
.leaflet-top {
    right: 0px !important;
    left: auto !important;
    opacity: 0.8;
    top: auto !important;
    bottom: 0px !important;
}

.leaflet-control-zoom {
    right: 10px !important;
    bottom: 40px !important;
}

.leaflet-control-zoom a, .leaflet-control-zoom a:hover {
    height: 30px !important;
    width: 30px !important;
    font-size: 15px;
    font-weight: normal;
    text-decoration: none;
    line-height: 30px !important;
}
*/
.ol-zoom,
.olControlZoom {
  right: 20px;
  left: auto !important;
  bottom: 30px;
  background: #000000 !important;
  opacity: 0.7;
}

.ol-zoom-in,
.ol-zoom-out,
.olControlZoomIn,
.olControlZoomOut {
  height: 30px !important;
  width: 30px !important;
  font-weight: bold;
  text-decoration: none;
}

.ol-zoom a,
.ol-zoom a:hover,
.olControlZoom a {
  font-size: 16px !important;
  font-weight: bold !important;
  background: none !important;
  line-height: 28px !important;
  text-decoration: none;
  color: white;
}

div.olControlZoom {
  top: auto !important;
}

.leaflet-draw-actions > li > a {
  color: #ffffff;
}

#loadscreen {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: white;
  z-index: 10000;
}

#loadscreen .center {
  position: absolute;
  top: 50%;
  left: 50%;
}

#loadscreen .bounce {
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
}

#loadscreen .text {
  transform: translate(-50%, -100px);
  -webkit-transform: translate(-50%, -100px);
  font-family: 'Open Sans';
  font-weight: 500;
  font-size: 16px;
  color: #96a0b4;
}

#loadscreen .bouncywrap {
  position: relative;
}

#loadscreen .dotcon {
  display: block;
  float: left;
  width: 50px;
  position: absolute;
}

#loadscreen .dc1 {
  -webkit-animation: bouncy1 1.5s infinite;
  left: -40px;
  animation: bouncy1 1.5s infinite;
}
/* ... */

